name:                lmdb-simple
version:             0.1.0.0

synopsis:            Simple API for LMDB
-- description:         

homepage:            https://github.com/verement/lmdb-simple#readme
bug-reports:         https://github.com/verement/lmdb-simple/issues

license:             BSD3
license-file:        LICENSE

author:              Rob Leslie
maintainer:          rob@mars.org
copyright:           © 2017 Robert Leslie

category:            Database

build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Database.LMDB.Simple
                       Database.LMDB.Simple.Extra
                       Database.LMDB.Simple.View
  other-modules:       Database.LMDB.Simple.Internal
  build-depends:       base >= 4.7 && < 5
                     , binary >= 0.8
                     , bytestring
                     , lmdb >= 0.2
  default-language:    Haskell2010
  default-extensions:  Trustworthy
  other-extensions:    ConstraintKinds
                       DataKinds
                       KindSignatures
                       TypeFamilies

source-repository head
  type:     git
  location: https://github.com/verement/lmdb-simple.git
